[package]
name = "wow-queue-detect"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
screenshots = "0.8.10"
rusty-tesseract = "1.1.10"
image = "0.25.5"
tempfile = "3.13.0"
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros", "fs", "time"] }
ctrlc = "3.4.5"
futures = "0.3.31"
anyhow = "1.0.93"
thiserror = "2.0.0"
